group 'net.groboclown.p4ic4idea'
version '0.12.0-SNAPSHOT'

allprojects {
    version '0.12.0'

    wrapper {
        description 'Modifies the gradle binary distribution location used by gradle wrapper'
        distributionUrl = uri('https://services.gradle.org/distributions/gradle-7.3.2-bin.zip')
    }

    tasks.withType(JavaCompile) {
        // This isn't sufficient.  Need to set the "--release 8" javac argument.
        // Until this is fixed, JDK9+ can't be used to compile the plugin.

        // When the plugin only supports IDE version >= 2020.3, this must be
        // changed to JDK 11
        sourceCompatibility = JavaVersion.VERSION_11
        targetCompatibility = JavaVersion.VERSION_11

        // Turn on deprecation warnings for all builds.
        // The only one that this is okay on, at the moment, is "test-core", as that
        // contains code used for mocking out calls.
        options.compilerArgs << "-Xlint:deprecation"
    }

}
